--- a/style.css
+++ b/style.css
@@ -20,13 +20,15 @@ h1 {
 header {
     margin-bottom: 30px;
 }
-form {
+.form-container {
+    background-color: white;
+    margin-bottom: 30px;
+    box-shadow: 0px 20px 60px rgba(111, 89, 161, 0.08);
     padding:30px;
     border-radius: 10px;
-    background-color: white;
+}
+form {
     display: flex;
-    box-shadow: 0px 20px 60px rgba(111, 89, 161, 0.08);
-    margin-bottom: 30px;
 }
 .instruction {
     padding: 16px;
@@ -45,9 +47,14 @@ form {
     width:120px;
     border-radius: 50px;
     line-height: 20px;
-    color:azure;
+    color:azure;  
     background-color: #433a64;
-
+}
+.hint {
+    font: size 12px;
+    line-height:1.5;
+    opacity:0.6;
+    margin-top:5px;
 }
 .poem {
     font-size: 16px;
@@ -58,11 +65,24 @@ form {
     border-radius: 10px;
     box-shadow: 0px 20px 60px rgba(65,50,100,0.08);
 }
-.poem strong{
+.poem strong {
     color:#433a64
 }
 footer {
     text-align: center;
     font-size: 13px;
     margin-top: 30px;
+}
+.generating {
+    animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+   to {
+    visibility: hidden;
+   } 
 }
